--- a/src/app/shared/modules/sidebar/components/sidebar.component.html
+++ b/src/app/shared/modules/sidebar/components/sidebar.component.html
@@ -1,4 +1,8 @@
 <a [routerLink]="['/customer/new']" href="#" class="list-group-item list-group-item-action bg-transparent second-text active"><i
     class="fas fa-address-book me-2"></i>Customer</a>
+<a [routerLink]="['/doctor/new']" href="#" class="list-group-item list-group-item-action bg-transparent second-text active"><i
+        class="fas fa-user-nurse me-2"></i>Doctor</a>
+<a [routerLink]="['/banner/new']" href="#" class="list-group-item list-group-item-action bg-transparent second-text active"><i
+        class="fas fa-image me-2"></i>Banner</a>
 <a href="#" class="list-group-item list-group-item-action bg-transparent text-danger fw-bold"><i
     class="fas fa-power-off me-2"></i>Logout</a>
