--- a/src/app/shared/modules/userform/components/userform.component.html
+++ b/src/app/shared/modules/userform/components/userform.component.html
@@ -39,10 +39,10 @@
                     <label class="form-label">Sex</label>
                     <br/>
                     <label class="radio-inline">
-                        <input type="radio" name="optradio" checked>&nbsp;Male
+                        <input type="radio" value="M" formControlName="sex">&nbsp;Male
                       </label>
                     <label class="radio-inline">
-                        &nbsp;&nbsp;<input type="radio" name="optradio">&nbsp;Female
+                        &nbsp;&nbsp;<input type="radio" value="F" formControlName="sex">&nbsp;Female
                       </label>
                 </div>
                 <div class="mb-3">
