--- a/src/app/createDoctor/componenets/createDoctor.component.html
+++ b/src/app/createDoctor/componenets/createDoctor.component.html
@@ -1,3 +1,3 @@
-<mc-doctorform [initialValues]="initialValues" [isSubmitting]="isSubmitting$ | async" (bannerSubmit)="onSubmit($event)">
+<mc-doctorform [initialValues]="initialValues" [isSubmitting]="isSubmitting$ | async" (doctorSubmit)="onSubmit($event)">
 
 </mc-doctorform>
