--- a/src/app/shared/modules/doctorform/components/doctorform.component.html
+++ b/src/app/shared/modules/doctorform/components/doctorform.component.html
@@ -11,6 +11,11 @@
 
                 </div>
                 <div class="mb-3">
+                    <label class="form-label">NIP</label>
+                    <input type="text" class="form-control" rows="5" formControlName="nip">
+
+                </div>
+                <div class="mb-3">
                     <label class="form-label">Email</label>
                     <input type="text" class="form-control" rows="5" formControlName="email">
 
@@ -63,7 +68,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputName1" class="form-label">Margin Type</label>
-                    <input type="text" class="form-control" formControlName="magrintype">
+                    <input type="text" class="form-control" formControlName="margintype">
 
                 </div>
                 <div class="mb-3">
@@ -82,7 +87,7 @@
 
                 </div>
                 <div class="mb-3">
-                    <input class="form-check-input" type="checkbox" value="true" id="flexCheckChecked" formControlName="is_promo">&nbsp;
+                    <input class="form-check-input" type="checkbox" value="1" id="flexCheckChecked" formControlName="ispromo">&nbsp;
                     <label class="form-check-label" for="flexCheckChecked">
     Promo
   </label>
