--- a/src/app/listBanner/components/listBanner/listBanner.component.html
+++ b/src/app/listBanner/components/listBanner/listBanner.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <a [routerLink]="['/customer/new']" class="btn btn-primary float-end">Add Customer <i class="fas fa-plus"></i></a>
+                <a [routerLink]="['/banner/new']" class="btn btn-primary float-end">Add Banner <i class="fas fa-plus"></i></a>
                 <br/>
             </div>
         </div>
