--- a/src/app/admin/editUser/componenets/editUser.component.html
+++ b/src/app/admin/editUser/componenets/editUser.component.html
@@ -1,1 +1,1 @@
-<mc-adminform *ngIf="initialValues$ | async" [initialValues]="initialValues$ | async" [isSubmitting]="isSubmitting$ | async" (userSubmit)="onSubmit($event)"></mc-adminform>
+<mc-adminform *ngIf="initialValues$ | async" [initialValues]="initialValues$ | async" [isSubmitting]="isSubmitting$ | async" (adminSubmit)="onSubmit($event)"></mc-adminform>
