--- a/src/app/admin/shared/modules/adminform/components/adminform.component.html
+++ b/src/app/admin/shared/modules/adminform/components/adminform.component.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputNumber1" class="form-label">Password</label>
-                    <input type="password" class="form-control" formControlName="phonenumber">
+                    <input type="password" class="form-control" formControlName="password">
 
                 </div>
 
