--- a/src/app/admin/createUser/componenets/createUser.component.html
+++ b/src/app/admin/createUser/componenets/createUser.component.html
@@ -1,1 +1,1 @@
-<mc-adminform [initialValues]="initialValues" [isSubmitting]="isSubmitting$ | async" (userSubmit)="onSubmit($event)"></mc-adminform>
+<mc-adminform [initialValues]="initialValues" [isSubmitting]="isSubmitting$ | async" (adminSubmit)="onSubmit($event)"></mc-adminform>
