--- a/src/app/admin/shared/modules/navigation/components/navigation.component.html
+++ b/src/app/admin/shared/modules/navigation/components/navigation.component.html
@@ -15,9 +15,7 @@
                     <i class="fas fa-user me-2"></i>John Doe
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#">Profile</a></li>
-                    <li><a class="dropdown-item" href="#">Settings</a></li>
-                    <li><a class="dropdown-item" href="#">Logout</a></li>
+                    <li (click)="logout()"><a class="dropdown-item" href="#">Logout</a></li>
                 </ul>
             </li>
         </ul>
