--- a/src/app/admin/shared/modules/sidebar/components/sidebar.component.html
+++ b/src/app/admin/shared/modules/sidebar/components/sidebar.component.html
@@ -1,5 +1,5 @@
 <a [routerLink]="['/admin/listuser']" href="#" class="list-group-item list-group-item-action bg-transparent second-text active"><i
-        class="fas fa-users"></i>Users</a>
+        class="fas fa-users"></i> Users</a>
 <a [routerLink]="['/admin/listcustomer']" href="#" class="list-group-item list-group-item-action bg-transparent second-text active"><i
     class="fas fa-address-book me-2"></i>Customer</a>
 <a [routerLink]="['/admin/listdoctor']" href="#" class="list-group-item list-group-item-action bg-transparent second-text active"><i
@@ -7,5 +7,5 @@
 <a [routerLink]="['/admin/listbanner']" href="#" class="list-group-item list-group-item-action bg-transparent second-text active"><i
         class="fas fa-image me-2"></i>Banner</a>
 
-<a href="#" class="list-group-item list-group-item-action bg-transparent text-danger fw-bold"><i
+<a (click)="logout()" href="#" class="list-group-item list-group-item-action bg-transparent text-danger fw-bold"><i
     class="fas fa-power-off me-2"></i>Logout</a>
