--- a/src/app/admin/shared/modules/tablelist/components/tablelist.component.html
+++ b/src/app/admin/shared/modules/tablelist/components/tablelist.component.html
@@ -37,7 +37,7 @@
                         {{ request[field[3]] }}
                     </div>
                     <div class="col-sm-12 col-lg-1 p-0">
-                        <a [routerLink]="['/'+apiUrlProps, request._idx,'edit']" class="btn btn-sm btn-success d-inline-block mr-1">
+                        <a [routerLink]="['/admin/'+apiUrlProps, request._idx,'edit']" class="btn btn-sm btn-success d-inline-block mr-1">
                             <i class="fas fa-edit"></i></a>
                         <a (click)="deleteData(request[field[0]])" class="btn btn-sm btn-danger d-inline-block">
                             <i class="fas fa-trash-alt"></i>
