--- a/src/app/admin/shared/modules/adminform/components/adminform.component.html
+++ b/src/app/admin/shared/modules/adminform/components/adminform.component.html
@@ -1,7 +1,7 @@
 <div class="container col-8">
     <div id="form-user" class="card card-outline-secondary">
         <div class="card-header">
-            <h3 class="mb-0">Customer Information</h3>
+            <h3 class="mb-0">Admin Information</h3>
         </div>
         <div class="card-body">
             <form [formGroup]="form" (ngSubmit)="onSubmit()">
