--- a/src/app/admin/shared/modules/sidebar/components/sidebar.component.html
+++ b/src/app/admin/shared/modules/sidebar/components/sidebar.component.html
@@ -6,6 +6,8 @@
         class="fas fa-user-nurse me-2"></i>Doctor</a>
 <a [routerLink]="['/admin/listbanner']" href="#" class="list-group-item list-group-item-action bg-transparent second-text active"><i
         class="fas fa-image me-2"></i>Banner</a>
+<a [routerLink]="['/admin/listlanguage']" href="#" class="list-group-item list-group-item-action bg-transparent second-text active"><i
+                class="fas fa-language"></i> Language</a>
 
 <a (click)="logout()" href="#" class="list-group-item list-group-item-action bg-transparent text-danger fw-bold"><i
     class="fas fa-power-off me-2"></i>Logout</a>
