--- a/src/app/admin/shared/modules/usercategoryform/components/usercategoryform.component.html
+++ b/src/app/admin/shared/modules/usercategoryform/components/usercategoryform.component.html
@@ -11,7 +11,7 @@
 
                 </div>
                 <div class="mb-3">
-                    <label for="exampleInputName1" class="form-label">HomeScree</label>
+                    <label for="exampleInputName1" class="form-label">HomeScreen</label>
                     <input type="text" class="form-control" formControlName="homescreen">
 
                 </div>
